# codeshells

./: .gitignore  .gitmodules  README.md
algo.euclidean-distance/: main.cxx
algo.jaccard-similarity/: main.cxx
algo.taxicab-distance/: main.cxx
allocator_performance/: main.cpp
asio_daytime/: main.cpp
asio_timer/: main.cpp
asm.hello_world/: Makefile
asm.swap/: main.cxx
asm.user_input/: .template  main.asm
available_memory/: main.cpp
awk.idna-stats/: idna-calc.awk
bash.random-googling/: main.sh
bash.snappfood-live/: main.sh
begin/: Makefile  cookies.h  headers.h  main.cpp
boost.allocate_unique/: main.cpp
boost.asio.coroutines/: CMakeLists.txt  main.cpp  pch.h
boost.asio.daytime/: CMakeLists.txt  main.cpp  pch.h
boost.asio.thread_pool/: main.cpp
boost.asio.timer/: CMakeLists.txt  main.cpp  pch.h
boost.beast.http_server_advanced/: main.cpp  pch.h
boost.beast.http_server_async/: main.cpp  pch.h  result.txt
boost.beast.http_server_coro/: CMakeLists.txt  main.cpp  pch.h  result.txt
boost.beast.http_server_fast/: main.cpp  pch.h
boost.beast.http_server_small/: .template  main.cpp  pch.h
boost.beast.http_server_stackless/: main.cpp  pch.h
boost.beast.http_server_sync/: main.cpp  pch.h
boost.beast.http_server_sync_cache/: main.cpp  pch.h  result.txt
boost.beast.http_server_sync_ssl/: CMakeLists.txt  main.cpp  pch.h  server_certificate.hpp
boost.fcgi/: .template  main.cpp  pch.h
boost.json.1/: main.cpp  pch.h
boost.signal/: main.cpp
boost.spirit.overmath.1/: main.cpp  overmath.hpp  pch.h
boost_asio/: main.cpp  main.plist
c._BitInt/: main.c
c.buffer-overflow/: Makefile  main.c  main2.c
c.is-stdout-piped/: main.c
c.libuv/: Makefile  main.cpp
c.libuv.dns/: main.cpp
c.linux.EVIOCGRAB/: main.c  main.cxx
c.linux.ignore-SIGPIPE-with-sigaction/: main.c
c.linux.io-uring-capablities/: Makefile  main.c
c.linux.io_uring.copy/: Makefile  main.c
c.linux.io_uring.stack_fixed_buffers/: Makefile  main.cpp
c.linux.io_uring.submission_queue_polling/: Makefile
c.linux.io_uring_web_server/: Makefile  main.c  request.h  response.h  socket.h  utils.h
c.linux.libevdev.mouse/: Makefile  main.c
c.linux.libudev.list/: CMakeLists.txt  main.cxx
c.linux.signal.terminal-size-change/: main.cpp
c.linux.tcp-cork/: .gitignore  Makefile  client  client.cpp  server  server.cpp
c.linux.vectorized-cat/: Makefile  main.c
c.mmap/: main.c
c.next_ptr/: Makefile  main.c
c.next_ptr.fix/: main.cpp
c.reorder-code/: main.c
casting/: main.cpp
cgi_test/: main.cpp
cpp.absl.int238/: Makefile  main.cpp
cpp.ada-get-scheme-benchmark/: main.cpp
cpp.alloca/: Makefile  main.cpp
cpp.allocator.CPO/: main.cxx
cpp.llvm.print-class/: CMakeLists.txt  main.cxx  test.cpp  test.sh
llvm.test-1/: CMakeLists.txt  main.cxx
(+415 files in other folders)
